[Biplab] Add: Authorize APIs and CRUD operation

--- a/FundooNote/FundooNote/appsettings.json
+++ b/FundooNote/FundooNote/appsettings.json
@@ -7,11 +7,10 @@
     }
   },
   "ConnectionString": {
-    "Fundoo": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = Fundoo; Integrated Security = SSPI;"
+    "Fundoo": "Data Source = (localdb)\\MSSQLLocalDB; Initial Catalog = FundooDB; Integrated Security = SSPI;"
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "ThisismySecretKey",
-    "Issuer": "Test.com"
+    "Key": "ThisismySecretKey"
   }
 }
